--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -17,17 +17,13 @@ enableEmoji = true
 
 [menu]
   [[menu.main]]
-    name = "Resume"
-    url = "/resume.pdf"
+    name = "About"
+    url = "/about"
     weight = 1
   [[menu.main]]
     name = "Projects"
     url = "/projects"
     weight = 2
-  [[menu.main]]
-    name = "Contact"
-    url = "/contact"
-    weight = 3
 
 [markup.goldmark.renderer]
   unsafe = true  # allow raw HTML in markdown files
