--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -24,6 +24,11 @@ enableEmoji = true
     name = "Projects"
     url = "/projects"
     weight = 2
+    haschild = TRUE
+  [[menu.main]]
+    name = "Animations"
+    url = "/animations"
+    parent = "Projects"
 
 [markup.goldmark.renderer]
   unsafe = true  # allow raw HTML in markdown files
