--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -18,7 +18,7 @@ enableEmoji = true
 [menu]
   [[menu.main]]
     name = "Resume"
-    url = "/resume.pdf"
+    url = "/resume"
     weight = 1
   [[menu.main]]
     name = "Blog"
